# SearchInFiles

./: .gitignore  README.md
search_rs/: Cargo.toml
search_rs/src/: file.rs  lib.rs  main.rs  utils.rs
search_rs/src/adapter/: mod.rs  normal.rs  pdf.rs
search_rs/src/adapter/excel/: excel.rs
search_rs/src/adapter/normal/: normal.rs
search_rs/src/adapter/pdf/: pdf.py  pdf.rs
search_rs/src/adapter/word/: word.rs
