[package]
name = "search_rs"
version = "0.0.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Vik1ang/SearchInFiles"
authors = ["vik1ang"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.0"
walkdir = "2"
is_executable = "1.0.1"
colored = "2"