[package]
name = "search_rs"
version = "0.0.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Vik1ang/SearchInFiles"
authors = ["vik1ang"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.0"
walkdir = "2"
colored = "2"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
calamine = "0.18.0"
dotext = "0.1.1"